--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,39 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto">
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
+
     <data>
-        <variable
-                name="main"
-                type="com.zanella.logsanddatabinding.MainActivity"/>
+        <variable name="user" type="com.zanella.logsanddatabinding.User"/>
     </data>
 
-    <android.support.constraint.ConstraintLayout
-            xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:tools="http://schemas.android.com/tools"
-            xmlns:app="http://schemas.android.com/apk/res-auto"
+    <LinearLayout
+
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            tools:context=".MainActivity">
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
         <TextView
-                android:text="@{main.nome}"
-                android:layout_width="126dp"
-                android:layout_height="44dp"
-                android:id="@+id/textViewShow" android:textSize="30sp"
-                android:layout_marginTop="200dp" app:layout_constraintTop_toTopOf="parent"
-                android:layout_marginStart="8dp"
-                app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
-                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.498"
-                android:fontFamily="casual"/>
-        <Button
-                android:text="Do Something"
+                android:id="@+id/tv_first_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="16dp"
+                android:text="@{user.firstName}"/>
 
-                android:layout_width="143dp"
-                android:layout_height="74dp"
-                android:id="@+id/btnDoSomething"
-                style="@style/Widget.AppCompat.Button.Colored" app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginStart="8dp" android:layout_marginTop="76dp"
-                app:layout_constraintTop_toBottomOf="@+id/textViewShow"/>
-    </android.support.constraint.ConstraintLayout>
+        <TextView
+                android:id="@+id/tv_last_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="16dp"
+                android:text="@{user.lastName}"/>
 
+        <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="16dp"
+                android:text="@{ user.fullName() }"/>
+    </LinearLayout>
 </layout>
